--- a/wiqed.opam
+++ b/wiqed.opam
@@ -9,6 +9,7 @@ depends: [
   "dune" {>= "2.7" & >= "2.7.1"}
   "base" {>= "v0.14.0"}
   "stdio" {>= "v0.14.0"}
+  "ppx_let" {>= "v0.14.0"}
   "ppx_expect" {>= "v0.14.0"}
   "odoc" {with-doc}
 ]
