--- a/dune
+++ b/dune
@@ -1,7 +1,7 @@
 (include_subdirs unqualified)
 
 (library
-    (name kernel)
+    (name wiqed)
     (inline_tests)
     (libraries base stdio)
     (preprocess (pps ppx_expect ppx_let)))
