--- a/wiqed.opam
+++ b/wiqed.opam
@@ -8,6 +8,7 @@ homepage: "https://github.com/felixmoebius/wiqed"
 bug-reports: "https://github.com/felixmoebius/wiqed/issues"
 depends: [
   "dune" {>= "2.7" & >= "2.7.1"}
+  "menhir" {>= "20201216"}
   "base" {>= "v0.14.0"}
   "stdio" {>= "v0.14.0"}
   "ppx_let" {>= "v0.14.0"}
