--- a/wiqed.opam
+++ b/wiqed.opam
@@ -9,6 +9,7 @@ bug-reports: "https://github.com/felixmoebius/wiqed/issues"
 depends: [
   "dune" {>= "2.7" & >= "2.7.1"}
   "menhir" {>= "20201216"}
+  "core" {>= "v0.14.0"}
   "base" {>= "v0.14.0"}
   "stdio" {>= "v0.14.0"}
   "ppx_let" {>= "v0.14.0"}
